--- a/student-dashboard.html
+++ b/student-dashboard.html
@@ -18,33 +18,29 @@
                     <i class="fas fa-user-graduate"></i>
                 </div>
                 <h4 id="studentName">أحمد محمد</h4>
-                <p>طالب - أولى ثانوي</p>
-                <div class="subscription-status active">
+                <p id="studentGrade">طالب - أولى ثانوي</p>
+                <div class="subscription-status" id="subscriptionStatus">
                     <i class="fas fa-crown"></i>
                     مشترك نشط
                 </div>
             </div>
 
             <nav class="dashboard-nav">
-                <a href="#my-courses" class="nav-item active">
+                <a href="#my-courses" class="nav-item active" onclick="showSection('my-courses')">
                     <i class="fas fa-play-circle"></i>
                     دوراتي
                 </a>
-                <a href="#progress" class="nav-item">
+                <a href="#progress" class="nav-item" onclick="showSection('progress')">
                     <i class="fas fa-chart-line"></i>
                     تقدمي
                 </a>
-                <a href="#videos" class="nav-item">
+                <a href="#videos" class="nav-item" onclick="showSection('videos')">
                     <i class="fas fa-video"></i>
                     الفيديوهات
                 </a>
-                <a href="#subscription" class="nav-item">
+                <a href="#subscription" class="nav-item" onclick="showSection('subscription')">
                     <i class="fas fa-credit-card"></i>
                     الاشتراك
-                </a>
-                <a href="#notifications" class="nav-item">
-                    <i class="fas fa-bell"></i>
-                    الإشعارات
                 </a>
             </nav>
         </aside>
@@ -52,12 +48,8 @@
         <!-- المحتوى الرئيسي -->
         <main class="dashboard-content">
             <div class="dashboard-header">
-                <h1 class="dashboard-title">مرحباً بعودتك!</h1>
+                <h1 class="dashboard-title" id="welcomeMessage">مرحباً بعودتك!</h1>
                 <div class="header-actions">
-                    <button class="btn-notification">
-                        <i class="fas fa-bell"></i>
-                        <span class="notification-count">2</span>
-                    </button>
                     <button class="btn-logout" onclick="logout()">
                         <i class="fas fa-sign-out-alt"></i>
                         تسجيل الخروج
@@ -65,108 +57,139 @@
                 </div>
             </div>
 
-            <!-- تقدم الطالب -->
-            <div class="progress-section">
-                <div class="progress-card">
-                    <h3>تقدمك في الدورة</h3>
-                    <div class="progress-bar large">
-                        <div class="progress" style="width: 65%"></div>
-                    </div>
-                    <div class="progress-stats">
-                        <span>٦٥% مكتمل</span>
-                        <span>١٣/٢٠ درس</span>
-                    </div>
-                </div>
-            </div>
-
-            <!-- الفيديوهات الحديثة -->
-            <section class="videos-section">
+            <!-- قسم دوراتي -->
+            <section id="my-courses" class="dashboard-section active">
                 <div class="section-header">
-                    <h2>آخر الفيديوهات</h2>
-                    <div class="filter-buttons">
-                        <button class="filter-btn active">الكل</button>
-                        <button class="filter-btn">غير المشاهد</button>
-                        <button class="filter-btn">المكتمل</button>
+                    <h2>دوراتي التعليمية</h2>
+                </div>
+
+                <div class="progress-section">
+                    <div class="progress-card">
+                        <h3>تقدمك في الدورة</h3>
+                        <div class="progress-bar large">
+                            <div class="progress" id="overallProgress" style="width: 0%"></div>
+                        </div>
+                        <div class="progress-stats" id="progressStats">
+                            <span>٠% مكتمل</span>
+                            <span>٠/٠ درس</span>
+                        </div>
                     </div>
                 </div>
 
-                <div class="videos-grid">
-                    <!-- فيديو 1 -->
-                    <div class="video-item">
-                        <div class="video-thumbnail">
-                            <i class="fas fa-play-circle"></i>
-                            <div class="video-duration">٢٥:١٥</div>
-                        </div>
-                        <div class="video-info">
-                            <h4 class="video-title">الزمن المضارع البسيط</h4>
-                            <p class="video-description">شرح شامل للزمن المضارع البسيط مع أمثلة تطبيقية</p>
-                            <div class="video-meta">
-                                <span><i class="fas fa-clock"></i> ٢٥ دقيقة</span>
-                                <span><i class="fas fa-eye"></i> ٢٥٠ مشاهد</span>
-                            </div>
-                            <div class="video-progress">
-                                <div class="progress-bar">
-                                    <div class="progress" style="width: 100%"></div>
-                                </div>
-                                <span>مكتمل</span>
-                            </div>
+                <div class="videos-section">
+                    <div class="section-header">
+                        <h2>الفيديوهات المتاحة</h2>
+                        <div class="filter-buttons">
+                            <button class="filter-btn active" onclick="filterVideos('all')">الكل</button>
+                            <button class="filter-btn" onclick="filterVideos('unwatched')">غير المشاهد</button>
+                            <button class="filter-btn" onclick="filterVideos('completed')">المكتمل</button>
                         </div>
                     </div>
 
-                    <!-- فيديو 2 -->
-                    <div class="video-item">
-                        <div class="video-thumbnail">
-                            <i class="fas fa-play-circle"></i>
-                            <div class="video-duration">٣٠:٤٥</div>
-                        </div>
-                        <div class="video-info">
-                            <h4 class="video-title">أدوات التعريف والنكرة</h4>
-                            <p class="video-description">فهم أدوات التعريف a, an, the واستخداماتها</p>
-                            <div class="video-meta">
-                                <span><i class="fas fa-clock"></i> ٣٠ دقيقة</span>
-                                <span><i class="fas fa-eye"></i> ١٨٠ مشاهد</span>
-                            </div>
-                            <div class="video-progress">
-                                <div class="progress-bar">
-                                    <div class="progress" style="width: 0%"></div>
-                                </div>
-                                <span>غير مشاهد</span>
-                            </div>
-                        </div>
+                    <div class="videos-grid" id="studentVideosList">
+                        <!-- سيتم تعبئة الفيديوهات ديناميكياً -->
                     </div>
                 </div>
             </section>
 
-            <!-- الإشعارات -->
-            <section class="notifications-section">
-                <h2>الإشعارات المهمة</h2>
-                <div class="notifications-list">
-                    <div class="notification-item important">
-                        <div class="notification-icon">
-                            <i class="fas fa-exclamation-circle"></i>
-                        </div>
-                        <div class="notification-content">
-                            <h4>اختبار دوري قريب</h4>
-                            <p>الاختبار الدوري للوحدة الأولى يوم السبت القادم</p>
-                            <span>منذ ١ يوم</span>
+            <!-- قسم التقدم -->
+            <section id="progress" class="dashboard-section">
+                <div class="progress-section">
+                    <div class="progress-card">
+                        <h3>إحصائيات تقدمك</h3>
+                        <div class="stats-grid">
+                            <div class="stat-card">
+                                <h5>الفيديوهات المشاهدة</h5>
+                                <h3 id="watchedVideos">0</h3>
+                            </div>
+                            <div class="stat-card">
+                                <h5>إجمالي الوقت</h5>
+                                <h3 id="totalTime">0 دقيقة</h3>
+                            </div>
+                            <div class="stat-card">
+                                <h5>معدل الإكمال</h5>
+                                <h3 id="completionRate">0%</h3>
+                            </div>
                         </div>
                     </div>
-                    <div class="notification-item">
-                        <div class="notification-icon">
-                            <i class="fas fa-video"></i>
+                </div>
+
+                <div class="videos-section">
+                    <h3>تفاصيل التقدم</h3>
+                    <div class="progress-list" id="progressDetails">
+                        <!-- سيتم تعبئة تفاصيل التقدم ديناميكياً -->
+                    </div>
+                </div>
+            </section>
+
+            <!-- قسم الفيديوهات -->
+            <section id="videos" class="dashboard-section">
+                <div class="videos-section">
+                    <div class="section-header">
+                        <h2>جميع الفيديوهات</h2>
+                        <div class="search-box">
+                            <input type="text" id="videoSearch" placeholder="ابحث في الفيديوهات..." onkeyup="searchVideos(this.value)">
+                            <i class="fas fa-search"></i>
                         </div>
-                        <div class="notification-content">
-                            <h4>فيديو جديد</h4>
-                            <p>تم إضافة فيديو جديد في دورة القواعد المتقدمة</p>
-                            <span>منذ ٣ أيام</span>
+                    </div>
+
+                    <div class="videos-grid" id="allVideosList">
+                        <!-- سيتم تعبئة جميع الفيديوهات ديناميكياً -->
+                    </div>
+                </div>
+            </section>
+
+            <!-- قسم الاشتراك -->
+            <section id="subscription" class="dashboard-section">
+                <div class="subscription-section">
+                    <div class="subscription-card">
+                        <h3>حالة اشتراكك</h3>
+                        <div class="subscription-info">
+                            <div class="info-item">
+                                <span>الحالة:</span>
+                                <strong id="subStatus">غير نشط</strong>
+                            </div>
+                            <div class="info-item">
+                                <span>تاريخ الانتهاء:</span>
+                                <strong id="subExpiry">غير محدد</strong>
+                            </div>
+                            <div class="info-item">
+                                <span>الباقة:</span>
+                                <strong id="subPlan">غير مشترك</strong>
+                            </div>
                         </div>
+                        <button class="btn-primary" onclick="renewSubscription()">
+                            <i class="fas fa-sync-alt"></i>
+                            تجديد الاشتراك
+                        </button>
                     </div>
                 </div>
             </section>
         </main>
     </div>
 
+    <!-- موديل تشغيل الفيديو -->
+    <div id="videoModal" class="modal">
+        <div class="modal-content large">
+            <span class="close" onclick="closeVideoModal()">&times;</span>
+            <div id="videoPlayer">
+                <div class="video-placeholder">
+                    <i class="fas fa-play-circle"></i>
+                    <p>جاري تحميل الفيديو...</p>
+                </div>
+            </div>
+            <div class="video-info-modal">
+                <h3 id="videoModalTitle">عنوان الفيديو</h3>
+                <p id="videoModalDescription">وصف الفيديو</p>
+                <div class="video-meta">
+                    <span><i class="fas fa-clock"></i> <span id="videoModalDuration">00:00</span></span>
+                    <span><i class="fas fa-calendar"></i> <span id="videoModalDate">غير محدد</span></span>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="js/main.js"></script>
-    <script src="js/dashboard.js"></script>
+    <script src="js/student-dashboard.js"></script>
 </body>
 </html>
