--- a/index.html
+++ b/index.html
@@ -325,7 +325,11 @@
         </div>
     </footer>
 
-    <script src="js/main.js"></script>
+    <script src="js/storage.js"></script>
+    <script src="js/subscriptions.js"></script>
+    <script src="js/notifications.js"></script>
     <script src="js/auth.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
